apps/vikunja/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja/vikunja:0.24.4 # pin a version, don't use latest
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: vikunja-files
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-files
          persistentVolumeClaim:
            claimName: vikunja-files-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: tools
spec:
  selector:
    app: vikunja
  ports:
    - port: 80
      targetPort: 3456
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
    - host: todos.juntos.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 80
